codegen/ui_tests/export_mod_raw_noreturn.stderr
WARN rustc_metadata::locator no metadata found: failed to mmap rmeta metadata: '\\?\$WORKSPACE/target\tests\target\x86_64-pc-windows-msvc\debug\deps\librhai_codegen_tests-13fbbdaa684db49e.rmeta'
WARN rustc_metadata::locator no metadata found: failed to mmap rmeta metadata: '\\?\$WORKSPACE/target\tests\target\x86_64-pc-windows-msvc\debug\deps\librhai_codegen_tests-1b00becb051b9b4f.rmeta'
error: functions marked with 'return_raw' must return Result<T, Box<EvalAltResult>>
  --> ui_tests/export_mod_raw_noreturn.rs:11:11
   |
11 | #[rhai_fn(return_raw)]
   |           ^^^^^^^^^^

error[E0433]: failed to resolve: use of undeclared crate or module `test_mod`
  --> ui_tests/export_mod_raw_noreturn.rs:22:5
   |
22 |     test_mod::test_fn(&mut n);
   |     ^^^^^^^^ use of undeclared crate or module `test_mod`
